Fixing low contrast Errors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -353,7 +353,7 @@ footer i:hover {
    width: 80%;
    /* display: flex; */
    align-items: center;
-   text-align: justify;
+   /* text-align: justify; */
    line-height: 150%;
    
 }
